mandy labguide and dashboard post

--- a/Automating_DCA_with_Dynatrace_API/dashboard-post/app/.env
+++ b/Automating_DCA_with_Dynatrace_API/dashboard-post/app/.env
@@ -1,3 +1,4 @@
 // REQUIREMENT: Configure these variables to match your Dynatrace tenant URL and API token
-DYNATRACE_TENANT_URL='https://<your tenant>.live.dynatrace.com'
-DYNATRACE_API_TOKEN='Api-Token dt0c01.XXXXXXX.XXXXXXXXXXXXXXXXX'
+DYNATRACE_TENANT_URL='https://abc123.live.dynatrace.com'
+DYNATRACE_API_TOKEN='Api-Token dt0c01.ABCDE.12345'
+DASHBOARD_ID='123-123-123-123-1234'
